LIMA-159 - US odds table quick fixes : odd-part alignement and color, o and u with the value

--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -9268,7 +9268,7 @@ span.dark-icon {
   float: left;
   display: block;
   width: 50%;
-  text-align: right;
+  text-align: center;
   line-height: 16px;
 }
 .table tbody tr > td.odd a .totals,
@@ -9286,6 +9286,7 @@ span.dark-icon {
   display: block;
   float: left;
   width: 50%;
+  text-align: center;
   line-height: 32px;
 }
 .table tbody tr > td.odd-type,
