--- a/compiled/css/style_split_1.css
+++ b/compiled/css/style_split_1.css
@@ -11333,7 +11333,7 @@ span.dark-icon {
   float: left;
   display: block;
   width: 50%;
-  text-align: right;
+  text-align: center;
   line-height: 16px;
 }
 
@@ -11353,6 +11353,7 @@ span.dark-icon {
   display: block;
   float: left;
   width: 50%;
+  text-align: center;
   line-height: 32px;
 }
 
