--- a/src/css/less/livescore/rules/ls-tables.less
+++ b/src/css/less/livescore/rules/ls-tables.less
@@ -514,7 +514,7 @@
               float: left;
               display: block;
               width: 50%;
-              text-align: right;
+              text-align: center;
               line-height: 16px;
             }
 
@@ -530,6 +530,7 @@
               display: block;
               float: left;
               width: 50%;
+              text-align: center;
               line-height: 32px;
             }
           }
